<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/btn_play"
        app:layout_constraintBottom_toTopOf="@+id/btnMarcador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnMarcador"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/btn_score"
        app:layout_constraintBottom_toTopOf="@+id/btnSalir"
        app:layout_constraintEnd_toEndOf="@+id/btnJugar"
        app:layout_constraintStart_toStartOf="@+id/btnJugar"
        app:layout_constraintTop_toBottomOf="@+id/btnJugar" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/btn_exit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnMarcador"
        app:layout_constraintStart_toStartOf="@+id/btnMarcador"
        app:layout_constraintTop_toBottomOf="@+id/btnMarcador" />

</androidx.constraintlayout.widget.ConstraintLayout>